<resources>
    <string name="app_name">Cloud-Hotel-Project</string>
    <string name="signin_signup">Sign In or Sign up here</string>
    <string name="add_new_room">Add new Room</string>
    <string name="manage_rooms">Manage Rooms</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_reviews">Manage Reviews</string>
    <string name="room_number">Room Number</string>
    <string name="add_room">Add Room</string>
    <string name="room_price">Room Price</string>
    <string name="click_to_add_room_picture">Click to add room picture</string>
    <string name="manage_room">Manage</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="available">Available</string>
    <string name="yes">Yes</string>
    <string name="add_another_picture">Add Another Picture</string>
    <string name="room_capacity">Room Capacity</string>
    <string name="update_room_details">Update Room Details</string>
    <string name="delete_room">Delete Room</string>
    <string name="username">Username</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="book_a_room">Book A Room</string>
    <string name="write_a_review">Write A Review</string>
    <string name="logout">Logout</string>
    <string name="write_a_review_for_hotel">Write a Review for Hotel</string>
    <string name="submit_review">Submit Review</string>
    <string name="book_it">Book It</string>
    <string name="write_your_comments">Write your comments</string>
    <string name="rating">Rating</string>
    <string name="comment">comment</string>
    <string name="delete_comment">Delete Comment</string>

    <string name="facebook_application_id">2105879656106971</string>
    <string name="facebook_app_id">2105879656106971</string>
    <string name="fb_login_protocol_scheme">fb2105879656106971</string>
    <string name="delete_account">Delete Account</string>

</resources>
