<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">


    <ImageView
        android:id="@+id/imageview_room_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/textviewx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Room #:"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline8" />

    <TextView
        android:id="@+id/textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_manage_room"
        app:layout_constraintStart_toStartOf="@+id/textviewx" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/available"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/textviewx"
        app:layout_constraintEnd_toStartOf="@+id/textview_room_available" />

    <TextView
        android:id="@+id/textview_room_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/yes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textview_room_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="6000"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_manage_room"
        app:layout_constraintStart_toEndOf="@+id/textview6" />

    <Button
        android:id="@+id/button_manage_room"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/manage_room"
        app:layout_constraintEnd_toEndOf="@+id/textview_room_available"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textview_room_available" />

    <TextView
        android:id="@+id/textview_room_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="7"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/textviewx"
        app:layout_constraintStart_toEndOf="@+id/textviewx" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Capacity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/textview6"
        app:layout_constraintStart_toStartOf="@+id/textview6"
        app:layout_constraintTop_toBottomOf="@+id/textview6" />

    <TextView
        android:id="@+id/textview_room_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textview_room_price" />


</android.support.constraint.ConstraintLayout>